# SiSSR

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  QtVTKRenderWindows.ui  README.md  SiSSR.cxx  create_header_tests.sh  docker-build.sh  docker-helper.sh  dv-sissr.cxx  dvSiSSRController.cxx  dvSiSSRController.h  dvSiSSRView.cxx  dvSiSSRView.h  dvSubdivisionRegistrationController.cxx  dvSubdivisionRegistrationController.h  dvSubdivisionRegistrationWindow.cxx  dvSubdivisionRegistrationWindow.h  sissrController.cxx  sissrController.h  sissrView.cxx  sissrView.h  tidy.sh
bash/: cardio-config.toml  png_to_gif.py  pyproject.toml  segmentation_to_surface.py  surface_to_watertight.py
cmake/: FindLAPACKE.cmake
includes/: dvAccelerationRegularizer.h  dvAccelerationRegularizer.hxx  dvCalculateResidualMesh.h  dvCostFunction.h  dvCostFunction.hxx  dvDirectoryStructure.h  dvEdgeLengthRegularizer.h  dvEdgeLengthRegularizer.hxx  dvGetPointsFromITKImage.h  dvLossScaleFactors.h  dvPlaneWidgetCallback.h  dvPlaneWidgetState.h  dvRegisterMeshToPointSet.h  dvRegisterMeshToPointSet.hxx  dvStateMachine.h  dvThinPlateRegularizer.h  dvThinPlateRegularizer.hxx  dvTriangleAspectRatioRegularizer.h  dvTriangleAspectRatioRegularizer.hxx  dvVelocityRegularizer.h  dvVelocityRegularizer.hxx  dv_lapacke.h  dv_schur_decomposition.h  dv_sylvester.h  dv_sylvester_tri.h  itkCleanSegmentationImageFilter.hxx  itkGenerateInitialModelImageToMeshFilter.h  itkGenerateInitialModelImageToMeshFilter.hxx  itkLoopSubdivisionSurfaceMatrices.h  itkLoopSubdivisionSurfaceMatrices.hxx  itkLoopSubdivisionSurfaceMesh.h  itkLoopSubdivisionSurfaceMesh.hxx  sissrAccelerationRegularizer.h  sissrAccelerationRegularizer.hxx  sissrAlgorithm.h  sissrCGALDecimationTechnique.h  sissrCGALSurfaceMeshToITKMesh.h  sissrCalculateBorderCells.h  sissrCalculateResidualMesh.h  sissrColorbarState.h  (+37 more)
src/: dvDirectoryStructure.cxx  dvPlaneWidgetCallback.cxx  dvStateMachine.cxx  dv_schur_decomposition.cxx  dv_sylvester_tri.cxx  sissrAlgorithm.cxx  sissrCGALDecimationTechnique.cxx  sissrDirectoryStructure.cxx  sissrInitialModelParameters.cxx  sissrParameters.cxx  sissrPlaneWidgetCallback.cxx  sissrSequentialDirectory.cxx  sissrStateMachine.cxx  sissrTransformState.cxx  vtkTransformState.cxx
test/: CMakeLists.txt
test/broken/: itkBezierRepresentationTest.cxx  itkLoopSubdivisionSurfaceMeshTest.cxx
test/src/: dvCalculateResidualMeshHeaderTest.cxx  dvCostFunctionHeaderTest.cxx  dvDirectoryStructureHeaderTest.cxx  dvGenerateInitialModelTest.cxx  dvGetPointsFromITKImageHeaderTest.cxx  dvLossScaleFactorsHeaderTest.cxx  dvPlaneWidgetCallbackHeaderTest.cxx  dvPlaneWidgetStateHeaderTest.cxx  dvRegisterMeshToPointSetHeaderTest.cxx  dvStateMachineHeaderTest.cxx  dvThinPlateRegularizerHeaderTest.cxx  dv_lapackeHeaderTest.cxx  dv_schur_decompositionHeaderTest.cxx  dv_sylvesterHeaderTest.cxx  dv_sylvester_triHeaderTest.cxx  itkCleanSegmentationImageFilterHeaderTest.cxx  itkGenerateInitialModelImageToMeshFilterHeaderTest.cxx  itkLoopSubdivisionSurfaceMatricesHeaderTest.cxx  itkLoopSubdivisionSurfaceMatricesTest.cxx  itkLoopSubdivisionSurfaceMeshHeaderTest.cxx  sissrAccelerationRegularizerHeaderTest.cxx  sissrCGALDecimationTechniqueHeaderTest.cxx  sissrCGALSurfaceMeshToITKMeshHeaderTest.cxx  sissrCalculateBoundaryCandidatesTest.cxx  sissrCalculateResidualMeshHeaderTest.cxx  sissrColorbarStateHeaderTest.cxx  sissrCostFunctionBaseHeaderTest.cxx  sissrCostFunctionHeaderTest.cxx  sissrDirectoryStructureHeaderTest.cxx  sissrEdgeLengthRegularizerHeaderTest.cxx  sissrEdge_preserving_LindstromTurk_placementHeaderTest.cxx  sissrEdge_preserving_base_placementHeaderTest.cxx  sissrEdge_preserving_midpoint_placementHeaderTest.cxx  sissrGenerateInitialModelTest.cxx  sissrGetPointsFromITKImageHeaderTest.cxx  sissrITKMeshToCGALSurfaceMeshHeaderTest.cxx  sissrInitialModelParametersHeaderTest.cxx  sissrLabeledMeshToKdMapHeaderTest.cxx  sissrLabeledMeshToKdMapTest.cxx  sissrLabeledMeshToKdTreeMapHeaderTest.cxx  (+16 more)
